# raylib-template

./: CMakeLists.txt
assets/starter/fonts/: bold.fnt
src/: Main.cpp
